@@ -4,6 +4,8 @@ Version 2.2-4
 
  o Added warning about logical predictors (suggestion of Kazuki Yoshida).
 
+ o Added factor.ci.style argument to plot.eff() and plot.eff() so that error bars rather than lines are plotted for effect CIs (after suggestion by Steve Taylor).
+
 Version 2.2-3
 
  o Fixed bugs in axis scaling and xlim specification (reported by Achim Zeileis).
